# gatorgrade

./: .bashrc  .coveragerc  .gitignore  .mdlrc  .pylintrc  .rumdl.toml  404.html  AGENTS.md  CODE_OF_CONDUCT.md  README.md  cosmic-ray.toml  coverage.json  gatorgrade.yml  generate.py  index.html  insights.md  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test.py  yaml_type_safety_test.yml
.github/: cspell.json  pull_request_template.md
.github/workflows/: main.yml  mkdocs.yml  publish.yml  release.yml  tag_publish.yml  test-publish.yml  test_publish.yml  test_release.yml
docs/: .remove-me  gen_pages.py  index.md
docs/source/: index.md
docs/stylesheets/: gator.css
gatorgrade/: __init__.py  detect.py  engine.py  hash.py  main.py  models.py  report_history.py  resolve.py  track.py  validate.py  version.py
gatorgrade/feedback/: feedback.py
gatorgrade/generate/: generate.py
gatorgrade/hint/: __init__.py  engine.py  fallback.py  local_engine.py  remote_engine.py  support.py
gatorgrade/input/: __init__.py  checks.py  command_line_generator.py  filter.py  in_file_path.py  parse_config.py  parse_config_function.py  set_up_shell.py  shell_commands.yml  test_in_file_path.py
gatorgrade/output/: __init__.py  check_result.py  out_issue_tracker.py  output.py  output_function_percentage.py  output_functions.py  output_percentage_printing.py  output_percentage_testing.py  output_tools.py  pyproject.toml  quotes.json  quotes.yml  report_params.py  test_function.py  test_output_functions.py  test_output_percentage_print.py  test_output_tools.py
gatorgrade/output/src/: output_functions.py
gatorgrade/output/tests/: test_function.py
gatorgrade/util/: github.py  versions.py
output/: output_functions.py  output_tools.py
reference/Summary/: index.html
reference/generate/generate/: index.html
reference/input/checks/: index.html
reference/input/command_line_generator/: index.html
reference/input/in_file_path/: index.html
reference/input/parse_config/: index.html
reference/input/set_up_shell/: index.html
reference/main/: index.html
reference/output/check_result/: index.html
reference/output/output/: index.html
reference/output/output_functions/: index.html
reference/output/output_percentage_printing/: index.html
reference/output/output_tools/: index.html
scripts/: MUTATION.md  ccl.py  list_survivors.sh  show_mutant_diff.sh  test_mutant.sh  tsc.py  vsc.py
search/: search_index.json
tests/: conftest.py  test_ccl.py  test_detect.py  test_engine.py  test_generate.py  test_generate_success.py  test_hash.py  test_input.py  test_json_output.py  test_main.py  test_output.py  test_output_functions.py  test_output_percentage_print.py  test_output_tools.py  test_report_history.py  test_resolve.py  test_temp.py  test_track.py  test_tsc.py  test_validate.py  test_vsc.py
tests/hint/: __init__.py  conftest.py  test_engine.py  test_fallback.py  test_local_engine.py  test_remote_engine.py  test_support.py
tests/input/: gatorgrade.yml  gatorgrade_no_shell_setup_check.yml  gatorgrade_one_gg_check_no_file.yml  gatorgrade_one_gg_check_no_file_context.yml  gatorgrade_one_shell_command_check.yml  gatorgrade_two_in_file_context_checks.yml  hello-world.py  test_checks.py  test_command_line_generator.py  test_filter.py  test_input.py  test_input_gg_checks.py  test_input_gg_checks_Liam.py  test_input_gg_checks_Michael.py  test_input_shell_command_checks.py  test_set_up_shell.py
tests/input/yml_test_files/: gatorgrade.yml  gatorgrade_contains_command.yml  gatorgrade_matchfilefragment.yml  gatorgrade_one_gg_check_in_file.yml  gatorgrade_outputlimit.yml  gatorgrade_two_in_file_context_checks.yml  gatorgrade_two_in_file_context_checks_incorrect_format.yml  gatorgrade_weighted_checks.yml  gatorgrader_both_checks.yml
tests/output/: test_check_result.py  test_out_issue_tracker.py  test_output.py
tests/output/mock_api/: __init__.py  github_mock_api.py
tests/test_assignment/: gatorgrade.yml  insights.json  insights.md
tests/test_assignment/src/: hello-world.py  reflection.md
