[tool.poetry]
name = "practical-03-running-pytest-tests"
version = "0.1.0"
description = ""
authors = ["Maria Kim Heinert <yeeunmariakim@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
